--- a/deployment/kubernetes-manifests/k8s-with-jaeger/ts-deployment-part1.yml
+++ b/deployment/kubernetes-manifests/k8s-with-jaeger/ts-deployment-part1.yml
@@ -886,15 +886,7 @@ spec:
         - env:
             - name: COLLECTOR_ZIPKIN_HTTP_PORT
               value: "9411"
-              #Enable the following configuration to send jaeger traces to Elasticsearch
-#            - name: ES_SERVER_URLS
-#              value: http://192.168.5.86:9200
-#            - name: ES_TAGS_AS_FIELDS_ALL
-#              value: "true"
-#            - name: SPAN_STORAGE_TYPE
-#              value: elasticsearch
-              #Enable the above configuration to send jaeger traces to Elasticsearch
-          image: jaegertracing/all-in-one:1.22.0
+          image: jaegertracing/all-in-one
           name: jaeger
           ports:
             - containerPort: 5775
@@ -914,40 +906,7 @@ spec:
               path: "/"
               port: 14269
             initialDelaySeconds: 5
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: jaeger-agent
-spec:
-  selector:
-    matchLabels:
-      app: jaeger-agent
-  replicas: 1
-  strategy:
-    type: Recreate
-  template:
-    metadata:
-      labels:
-        app: jaeger-agent
-      name: jaeger-agent
-    spec:
-      containers:
-        - name: jaeger-agent
-          image: jaegertracing/jaeger-agent:1.30
-          ports:
-            - containerPort: 5775
-              protocol: UDP
-            - containerPort: 6831
-              protocol: UDP
-            - containerPort: 6832
-              protocol: UDP
-            - containerPort: 5778
-              protocol: TCP
-          args:
-            - --reporter.grpc.host-port=ingest.lightstep.com:443
-            - --reporter.type=grpc
-            - --reporter.grpc.tls.enabled=true
+
 ---
 
 apiVersion: v1
@@ -1003,11 +962,17 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: jaeger-agent-test
+  name: jaeger
   labels:
-    app: jaeger-agent-test
+    app: jaeger
+    app.kubernetes.io/name: jaeger
+    app.kubernetes.io/component: agent
 spec:
   ports:
+    - name: agent-zipkin-thrift
+      port: 5775
+      protocol: UDP
+      targetPort: 5775
     - name: agent-compact
       port: 6831
       protocol: UDP
@@ -1022,7 +987,8 @@ spec:
       targetPort: 5778
   clusterIP: None
   selector:
-    app: jaeger-agent
+    app.kubernetes.io/name: jaeger
+    app.kubernetes.io/component: all-in-one
 
 ---
 
