--- a/ts-order-other-service/Dockerfile
+++ b/ts-order-other-service/Dockerfile
@@ -1,7 +1,20 @@
-FROM java:8-jre
+FROM ubuntu:18.04
 
-RUN /bin/cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo 'Asia/Shanghai' >/etc/timezone
+# Install OpenJDK-8
+RUN apt-get update && \
+    apt-get install -y openjdk-8-jdk && \
+    apt-get install -y ant && \
+    apt-get install ca-certificates-java && \
+    apt-get clean && \
+    update-ca-certificates -f;
 
+# Setup JAVA_HOME -- useful for docker commandline
+ENV JAVA_HOME /usr/lib/jvm/java-8-openjdk-amd64/
+RUN export JAVA_HOME
+
+RUN ln -fs /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo 'Asia/Shanghai' >/etc/timezone
+
+COPY src/ src/
 ADD ./target/ts-order-other-service-1.0.jar /app/
 CMD ["java", "-Xmx200m", "-jar", "/app/ts-order-other-service-1.0.jar"]
 #CMD java $JAVA_OPTIONS -jar /app/ts-order-other-service-1.0.jar
