--- a/ts-order-other-service/Dockerfile
+++ b/ts-order-other-service/Dockerfile
@@ -1,7 +1,8 @@
-FROM java:8-jre
+FROM openjdk:8
 
 RUN /bin/cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo 'Asia/Shanghai' >/etc/timezone
 
+COPY src/ src/
 ADD ./target/ts-order-other-service-1.0.jar /app/
 CMD ["java", "-Xmx200m", "-jar", "/app/ts-order-other-service-1.0.jar"]
 #CMD java $JAVA_OPTIONS -jar /app/ts-order-other-service-1.0.jar
